setup/nuvolaris/streamer/traefik-template.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.idleTimeout: "600"
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.readTimeout: "600"
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.writeTimeout: "600"

$T    cert-manager.io/cluster-issuer: letsencrypt-prod
$T    traefik.ingress.kubernetes.io/router.tls: "true"
$T    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web

  name: nuvolaris-streamer-api-ingress
  namespace: nuvolaris

spec:
  ingressClassName: traefik

$T  tls:
$T    - hosts:
$T        - stream.${STREAMER_API_HOSTNAME:-localhost}
$T      secretName: streamer-api-tls

  rules:
  - host: stream.${STREAMER_API_HOSTNAME:-localhost}
    http:
      paths:
      - backend:
          service:
            name: nuvolaris-streamer-api
            port:
              number: 8080
        path: /
        pathType: Prefix
